# storlets

./: .coveragerc  .functests  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .unittests  .zuul.yaml  AUTHORS  CHANGELOG  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  SBusPythonFacade  bindep.txt  build.xml  cluster_config.json-sample  install_libs.sh  openstack-common.conf  py2-constraints.txt  requirements.txt  s2aio.sh  sbus  sdeploy.sh  setup.cfg  setup.py  storlet_daemon  storlet_daemon_factory  storlet_gateway  storlet_middleware  test-requirements.txt  tox.ini
Deploy/playbook/: cluster_check.yml  common.yml  common.yml-sample  container_storlet_engine.yml  create_default_tenant.yml  deploy_default_tenant.yml  docker_base_storlet_images.yml  docker_repository.yml  docker_storlet_engine_image.yml  fetch_proxy_conf.yml  host_storlet_engine.yml  hosts  set_test_conf.yml  storlet_install.sh  storlet_mgmt.yml  ustorlet.yml
Engine/: build.xml
Engine/SCommon/: build.xml
Engine/SDaemon/: build.xml
Engine/SMScripts/: build.xml  restart_docker_container.c  send_halt_cmd_to_daemon_factory.py
Engine/agent/: build.xml  setup.py
Engine/storlet_daemon_factory/: build.xml  daemon_factory.py  setup.py
Engine/swift/: build.xml  setup.py
StorletSamples/: .gitignore
StorletSamples/CompressStorlet/: build.xml
StorletSamples/ExecDepStorlet/: build.xml
StorletSamples/HalfStorlet/: build.xml
StorletSamples/IdentityStorlet/: build.xml
StorletSamples/PartitionsIdentityStorlet/: build.xml
StorletSamples/TestMetadataStorlet/: build.xml
StorletSamples/TestStorlet/: build.xml
StorletSamples/ThumbnailStorlet/: build.xml
StorletSamples/java/: build.xml
SystemTests/: RH_and_CSS_test.py  SLO_test.py  deploy_storlet.py  execdep_test.py  half_storlet_test.py  identity_storlet_test.py  metadata_storlet_test.py  run_proxy_only_test.sh  storlets_test_utils.py  swift_cli.sh  sys_test.py  sys_test_params.py  textui_progress_bar.py
common/: cluster_config_parser.py  deploy_storlet.py  utils.py
devstack/: localrc.py2.sample  localrc.sample  plugin.sh  swift_config.py
doc/: requirements.txt
doc/source/: building_and_deploying_docker_images.rst  conf.py  contributing.rst  deployer_installation.rst  dev_and_test_guide.rst  docker_compute_engine.rst  engine_dev_installation.rst  engine_dev_tests.rst  getting_started.rst  index.rst  installation.rst  invoking_storlets.rst  ipython_integration.rst  readme.rst  s2aio.rst  s2aio_dev_host_include.rst  storlet_all_in_one.rst  storlet_api.rst  storlet_engine_overview.rst  storlets_docker_gateway.rst  storlets_installation_guide.rst  storlets_management.rst  storlets_terminology.rst  usage.rst  writing_and_deploying_java_storlets.rst  writing_and_deploying_python_storlets.rst  writing_and_deploying_storlets.rst
etc/: object-server.conf-sample  proxy-server.conf-sample  storlet-docker-gateway.conf-sample  storlet-stub-gateway.conf-sample
install/: install_ansible.sh
install/storlets/: cluster_check.yml  cluster_config.json-sample  container_storlet_engine.yml  deploy_default_tenant.yml  docker_base_storlet_images.yml  docker_cluster.yml  enable_storlets_for_default_project.yml  enable_storlets_for_default_tenant.yml  fetch_proxy_conf.yml  host_side_storlet_engine.yml  host_storlet_engine.yml  install_storlets.sh  installation_vars.yml-sample  prepare_host-sample  prepare_storlets_install.sh  prepare_storlets_install.yml  prepare_vars.yml-sample  set_test_conf.yml  storlet.yml  storlet_mgmt.yml  storlets_dynamic_inventory.py
install/swift/: README.md  hosts  install_swift.sh  localrc.sample  prepare_swift_install.yml  vars.yml  vars.yml-sample
playbooks/storlets-functional/: post-py3.yaml  post.yaml  pre-py3.yaml  pre.yaml  run-py3.yaml  run.yaml
releasenotes/notes/: 10_0_0-0cd22dc24bf911de.yaml  11_0_0-c8553e0c02f33e8c.yaml  12_0_0-7a6959dc625e8d62.yaml  13_0_0-f24d257669f564aa.yaml  14_0_0-a0cd8b553bab57c3.yaml  15_0_0-012cb3b56da708de.yaml  16_0_0-0922c618b793ec6a.yaml  1_0_0_release-fa5dd1bedecd412c.yaml  2_0_0-e987cd43729edf86.yaml  3_0_0-6e899d137b33437c.yaml  4_0_0-a37d0a751c96b27d.yaml  5_0_0-7e2680cab4c2548b.yaml  (+4 more)
s2aio/: hosts  prepare_storlets_install.yml  storlets_aio.sh  storlets_aio.yml  storlets_install.yml  swift_install.yml  ustorlets_aio.sh  ustorlets_aio.yml  vars.yml
scripts/: Makefile  restart_docker_container.c  send_halt_cmd_to_daemon_factory.py
storlets/: __init__.py
tests/: base.py  setup_functional_test.sh  test_storlets.py
tools/: copy_logs.sh  deploy_storlet.py  utils.py
(+468 files in other folders)
