[metadata]
name = storlets
summary = Middleware and Compute Engine for an OpenStack Swift compute framework that runs compute within a Swift cluster
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/storlets/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    storlets

[entry_points]
paste.filter_factory =
    storlet_handler = storlets.swift_middleware.storlet_handler:filter_factory

storlets.gateways =
    stub = storlets.gateway.gateways.stub:StorletGatewayStub
    docker = storlets.gateway.gateways.docker:StorletGatewayDocker

console_scripts =
    sbus = storlets.sbus.cli:main
    storlets-daemon = storlets.agent.daemon.server:main
    storlets-daemon-factory = storlets.agent.daemon_factory.server:main
