[metadata]
name = storlets
summary = Middleware and Compute Engine for an OpenStack Swift compute framework that runs compute within a Swift cluster
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/storlets/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    storlets

scripts =
    bin/storlets-daemon
    bin/storlets-daemon-factory

[extras]
docker =
    docker>=1.5.0  # Apache-2.0
podman =
    podman>=5.0.0  # Apache-2.0

[entry_points]
paste.filter_factory =
    storlet_handler = storlets.swift_middleware.storlet_handler:filter_factory

storlets.gateways =
    stub = storlets.gateway.gateways.stub:StubStorletGateway
    docker = storlets.gateway.gateways.docker:DockerStorletGateway
    podman = storlets.gateway.gateways.podman:PodmanStorletGateway

console_scripts =
    sbus = storlets.sbus.cli:main

[codespell]
quiet-level = 4
# Words to ignore:
# cna: Intel CNA card
ignore-words-list = cna
